on startup
fixed group null setting.
I flimmed.

-------------------------------------------------------------------------------

Thu Sep  2 12:53:23 PDT 1999
(Mandrake)

Added a bug to TODO list.

-------------------------------------------------------------------------------

Thu Sep  2 13:02:53 PDT 1999
(Raster)

move bug to be off for E 17.. its minor and will get fixedf then anyway :)

-------------------------------------------------------------------------------

Thu Sep  2 13:11:08 PDT 1999
(Mandrake)

fixed ecvs to force update timestamp.h always first.

-------------------------------------------------------------------------------

Thu Sep  2 13:22:24 PDT 1999
(Mandrake)

Changed TODO format slightly.  making an automated script to build a bugs.html
page on enlightenment.org

-------------------------------------------------------------------------------

Thu Sep  2 14:24:52 PDT 1999
(Mandrake)

Added focus code rewrite into todo list

-------------------------------------------------------------------------------

Thu Sep  2 14:38:11 PDT 1999
(Raster)

fixed tooltip drawing bug.. 
been updating brushed metal.. MUCH sexier now :)

-------------------------------------------------------------------------------

Thu Sep  2 15:53:53 PDT 1999
(Raster)

more updates on brushed metal.. :)

-------------------------------------------------------------------------------

Thu Sep  2 17:03:39 PDT 1999
(Mandrake)

some more KDE work.  getting closer

-------------------------------------------------------------------------------

Thu Sep  2 17:00:15 PDT 1999
(Raster)

and more changes to bushed metal.. pretty much done now.. and added a 
label in settings dialogs

-------------------------------------------------------------------------------

Thu Sep  2 17:13:45 PDT 1999
(Raster)

added patch from duncan for mirror group properties - also added mroe padding 
in dialog ok/etrc. buttons for theme :)